--- a/server/ShoppingListApi/Properties/launchSettings.json
+++ b/server/ShoppingListApi/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7078;http://localhost:5090",
+      "applicationUrl": "http://localhost:8080;http://localhost:5090",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
